WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210632
[WebGL] Confirm there are no errors when setting up framebuffers
https://bugs.webkit.org/show_bug.cgi?id=210632
Summary
[WebGL] Confirm there are no errors when setting up framebuffers
Dean Jackson
Reported
2020-04-16 19:42:35 PDT
We're seeing crashes on macOS inside GraphicsContextGL::reshape(). Specifically when we submit work at the end of the function via glFlush. At the moment the cause is a mystery, because we should bail out before then if the multisample renderbuffer was not complete. In the hope that it helps somewhat, add a call to glGetError to double check that there isn't anything horribly wrong before we talk to the GPU.
Attachments
Patch
(5.69 KB, patch)
2020-04-17 15:56 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-16 19:42:48 PDT
<
rdar://problem/61916680
>
Dean Jackson
Comment 2
2020-04-17 15:56:06 PDT
Created
attachment 396812
[details]
Patch
Dean Jackson
Comment 3
2020-04-17 16:31:18 PDT
Committed
r260301
: <
https://trac.webkit.org/changeset/260301
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug